--- a/uptimekuma.yml
+++ b/uptimekuma.yml
@@ -4,11 +4,13 @@ metadata:
   name: uptimekuma
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: uptimekuma
+  namespace: uptimekuma
 spec:
   replicas: 1
+  serviceName: uptimekuma-service
   selector:
     matchLabels:
       app: uptimekuma
@@ -18,10 +20,30 @@ spec:
         app: uptimekuma
     spec:
       containers:
-      - name: uptimekuma
-        image: louislam/uptime-kuma:latest
-        ports:
-        - containerPort: 3001
+        - name: uptimekuma
+          image: louislam/uptime-kuma:latest
+          env:
+            - name: UPTIME_KUMA_PORT
+              value: "3001"
+            - name: PORT
+              value: "3001"
+          ports:
+            - name: uptimekuma
+              containerPort: 3001
+              protocol: TCP
+          volumeMounts:
+            - name: uptimekuma-data
+              mountPath: /app/data
+
+  volumeClaimTemplates:
+    - metadata:
+        name: uptimekuma-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        volumeMode: Filesystem
+        resources:
+          requests:
+            storage: 4Gi
 ---
 apiVersion: v1
 kind: Service
