--- a/uptimekuma.yml
+++ b/uptimekuma.yml
@@ -59,6 +59,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: uptimekuma-service
+  namespace: uptimekuma
 spec:
   selector:
     app: uptimekuma
