--- a/uptimekuma.yml
+++ b/uptimekuma.yml
@@ -60,14 +60,16 @@ kind: Service
 metadata:
   name: uptimekuma-service
   namespace: uptimekuma
+  labels:
+    app: uptimekuma
 spec:
+  type: ClusterIP
   selector:
     app: uptimekuma
   ports:
     - protocol: TCP
       port: 3001
       targetPort: 3001
-  type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
